--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
 				 |_ _  |.--.) )
 				 ( T   )     /
 				(((^_(((/(((_/
-				coded with love by des
-hi this is a little test so i can see if this thing is working...
+				coded with love by des <3
 -->
 
 <head>
