--- a/public/notebook/links/index.html
+++ b/public/notebook/links/index.html
@@ -142,6 +142,7 @@
 
 		<h3 id="tut">tutorials / guides</h3>
 
+		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
 		<li>flexbox: <a href="https://solaria.neocities.org/gallerytut" target="_blank">solaria's simple gallery guide</a> / <a href="https://sadgrl.online/learn/articles/using-flexbox" target="_blank">sadgrl's flexbox guide</a></li>
 		<li>border imgs: <a href="https://solaria.neocities.org/bits/" target="_blank">solaria's custom CSS border imgs</a></li>
 		<li><a href="https://bechnokid.neocities.org/resources/tut_statuscafefeed" target="_blank">status.cafe feed reader!</a></li>
