--- a/public/notebook/F2U/codes.html
+++ b/public/notebook/F2U/codes.html
@@ -36,6 +36,12 @@
 			</center>
 		<p>F2U layouts and templates coded by me for you to use on your website!</p>
 
+		<h2>rules</h2>
+
+		<li>can be edited to your hearts content! go crazy even.
+		<li>can be used for any hosting site. examples: neocities, tumblr.</li>
+		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.neocities.org/" target="_blank">website</a> is very appreciated!</li>
+
 		<h2 id="notebook"><a title="click for preview and code!" href="preview/notebook.html" target="_blank">notebook</a></h2>
 		<center><img src="preview/notebook.jpg" width="100%"><br><img src="preview/notebook2.jpg" width="100%"></center>
 		<p>since i was making the notebook code for my resources page, i wanted to clean to code up eventually so i could share it with others and here is the result!</p>
