--- a/public/sites/index.html
+++ b/public/sites/index.html
@@ -61,52 +61,42 @@
 			<a title="river - cute website! can't wait to watch it grow" href="https://optimism.neocities.org" target="_blank"><img src="!g/optimism.png"></a>
 			<a title="rue - very interesting and well written music reviews!" href="https://angelpuppyclub.neocities.org" target="_blank"><img src="!g/angelpuppyclub.gif"></a>
 			<a title="jay - love the aesthetic of this site! the artbooks page is my favorite" href="https://catsoupery.neocities.org" target="_blank"><img src="!g/catsoupery.gif"></a>
-			<a title="hoonis" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
-			<a title="ava" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
-			<a title="spencer" href="https://foggybear42.neocities.org" target="_blank"><img src="!g/foggybear.gif"></a>
-			<a title="pirra" href="https://pirra.neocities.org" target="_blank"><img src="!g/pirra.gif"></a>
-			<a title="r0b1n666" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
-			<a title="bomsoup" href="https://bomsoup.neocities.org" target="_blank"><img src="!g/bomsoup.gif"></a>
-			<a title="crow" href="https://crows-nest.neocities.org" target="_blank"><img src="!g/crows-nest.gif"></a>
-			<a title="juliette" href="https://juriettoo.neocities.org" target="_blank"><img src="!g/juriettoo.png"></a>
-			<a title="rio / jay" href="https://nenrikido.neocities.org" target="_blank"><img src="!g/nenrikido.gif"></a>
-			<a title="finn" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
-			<a title="zed" href="https://ohrade.neocities.org" target="_blank"><img src="!g/ohrade.gif"></a>
-			<a title="centipede / victoria" href="https://centis.neocities.org" target="_blank"><img src="!g/centis.png"></a>
-			<a title="charc" href="https://charc.neocities.org" target="_blank"><img src="!g/charc.gif"></a>
-			<a title="elf" href="https://elfwyn.neocities.org" target="_blank"><img src="!g/elfwyn.gif"></a>
-			<a title="mamo" href="https://kakashi.neocities.org" target="_blank"><img src="!g/kakashi.gif"></a>
-			<a title="mn1ca" href="https://mn1ca.neocities.org" target="_blank"><img src="!g/mn1ca.gif"></a>
-			<a title="toha" href="https://snals.neocities.org" target="_blank"><img src="!g/snals.gif"></a>
-			<a title="tuesday" href="https://tuesdaysplace.neocities.org" target="_blank"><img src="!g/tuesdaysplace.png"></a>
-			<a title="lily" href="https://mothcub.neocities.org" target="_blank"><img src="!g/mothcub.gif"></a>
-			<a title="celine" href="https://swirl.neocities.org" target="_blank"><img src="!g/swirl.gif"></a>
-			<a title="luc" href="https://freakphone.net" target="_blank"><img src="!g/freakphone.net.gif"></a>
-			<a title="jorts" href="https://jorts.neocities.org" target="_blank"><img src="!g/jorts.gif"></a>
-			<a title="mani" href="https://mani.neocities.org" target="_blank"><img src="!g/mani.gif"></a>
-			<a title="mufo" href="https://mufo.neocities.org" target="_blank"><img src="!g/mufo.gif"></a>
-			<a title="starrchild" href="https://starrchild.neocities.org" target="_blank"><img src="!g/starrchild.png"></a>
-			<a title="00s" href="https://00s.neocities.org" target="_blank"><img src="!g/00s.png"></a>
-			<a title="michael" href="https://canidterror.neocities.org" target="_blank"><img src="!g/canidterror.png"></a>
-			<a title="meowcatsrule" href="https://meowcatsrule.neocities.org" target="_blank"><img src="!g/meowcatsrule.gif"></a>
-			<a title="lopster" href="https://lopster.neocities.org" target="_blank"><img src="!g/lopster.png"></a>
-			<a title="jj" href="https://cygnet.neocities.org" target="_blank"><img src="!g/cygnet.png"></a>
-			<a href="https://strawberry-gashes.neocities.org" title="erin" target="0"><img src="!g/strawberry-gashes.gif"></a>
-			<a title="bunny" href="https://pastelbunnybab.neocities.org/" target="_blank"><img src="!g/pastelbunnybab.gif"></a>
-			<a title="philia" href="https://philia995.neocities.org" target="_blank"><img src="!g/philia995.gif"></a>
-			<a title="junothesilly" href="https://junothesilly1.neocities.org" target="_blank"><img src="!g/junothesilly.png"></a>
-			<a title="mouse" href="https://aisforaardvark.neocities.org" target="_blank"><img src="!g/aisforaardvark.png"></a>
-			<a title="oakley" href="https://n64bug.neocities.org" target="_blank"><img src="!g/n64bug.gif"></a>
-			<a title="tsukinio" href="https://komichi.neocities.org" target="_blank"><img src="!g/komichi.png"></a>
-			<a title="fae" href="https://faegardens333.neocities.org" target="_blank"><img src="!g/faegardens333.gif"></a>
-			<a title="princess" href="https://princss.online" target="_blank"><img src="https://princss.online/media/images/buttons/princss_button.png"></a>
-			<a title="viter" href="https://lovelystar.neocities.org/" target="_blank"><img src="!g/lovelystar.png"></a>
-			<a title="nyatchi" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
-			<a title="mari" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
-			<a title="avery" href="https://isopodz.neocities.org" target="_blank"><img src="https://isopodz.neocities.org/buttons/littleguybutton.jpg" alt="isopodz"></a>
-			<a title="jude" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
-			<a title="benrey" href="https://lamorte.neocities.org" target="_blank"><img src="!g/lamorte.gif"></a>
-			<a title="harley" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
+			<a title="hoonis - the most colorful website ever!! whimsical even" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
+			<a title="ava - very fun layout!" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
+			<a title="spencer - lots of cool collections + i love looking at pics of harvey aka his cat + THEJERM" href="https://foggybear42.neocities.org" target="_blank"><img src="!g/foggybear.gif"></a>
+			<a title="pirra - LOVE the sticker sheet collection!!! and it inspired mine as well" href="https://pirra.neocities.org" target="_blank"><img src="!g/pirra.gif"></a>
+			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
+			<a title="bomsoup - fellow kpopper, i also get very cool film recs from this site!" href="https://bomsoup.neocities.org" target="_blank"><img src="!g/bomsoup.gif"></a>
+			<a title="crow - really like their music reviews! it is always interesting to read on their perspective of things." href="https://crows-nest.neocities.org" target="_blank"><img src="!g/crows-nest.gif"></a>
+			<a title="juliette - CUTEEEE site!!! i love being here" href="https://juriettoo.neocities.org" target="_blank"><img src="!g/juriettoo.png"></a>
+			<a title="rio - awesome website with a responsive (and incredible!) layout. also has a ton of links to resources, books, etc!" href="https://nenrikido.neocities.org" target="_blank"><img src="!g/nenrikido.gif"></a>
+			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
+			<a title="zed - cool site with lots to see!" href="https://ohrade.neocities.org" target="_blank"><img src="!g/ohrade.gif"></a>
+			<a title="charc - LOVE the colors of this site!!! very cute" href="https://charc.neocities.org" target="_blank"><img src="!g/charc.gif"></a>
+			<a title="mamo - ONE OF MY FAV SITES!!! they have a ton of pages dedicated to the media they consume and i just love how they all look!!! lots of stuff to check out here! their lyrics pages is a must see" href="https://kakashi.neocities.org" target="_blank"><img src="!g/kakashi.gif"></a>
+			<a title="mn1ca - another of my favorite sites! centered around arts and craft! the layout is so cool too" href="https://mn1ca.neocities.org" target="_blank"><img src="!g/mn1ca.gif"></a>
+			<a title="toha - snails!" href="https://snals.neocities.org" target="_blank"><img src="!g/snals.gif"></a>
+			<a title="tuesday - cool site with interesting content!" href="https://tuesdaysplace.neocities.org" target="_blank"><img src="!g/tuesdaysplace.png"></a>
+			<a title="celine - super adorable" href="https://swirl.neocities.org" target="_blank"><img src="!g/swirl.gif"></a>
+			<a title="luc - cool site! has nice art and a bunch of links!" href="https://freakphone.net" target="_blank"><img src="!g/freakphone.net.gif"></a>
+			<a title="jorts - charming site! i like their blog" href="https://jorts.neocities.org" target="_blank"><img src="!g/jorts.gif"></a>
+			<a title="mani - my fav page is the edm one!!! really enjoy the music they have there" href="https://mani.neocities.org" target="_blank"><img src="!g/mani.gif"></a>
+			<a title="mufo - small little site with a nice blog" href="https://mufo.neocities.org" target="_blank"><img src="!g/mufo.gif"></a>
+			<a title="00s - love the blog as well" href="https://00s.neocities.org" target="_blank"><img src="!g/00s.png"></a>
+			<a title="meowcatsrule - cats rule indeed!!! cool photo journal" href="https://meowcatsrule.neocities.org" target="_blank"><img src="!g/meowcatsrule.gif"></a>
+			<a title="lopster - crazy website with lots of clutter!" href="https://lopster.neocities.org" target="_blank"><img src="!g/lopster.png"></a>
+			<a title="jj - very lovely! i love reading about their projects! so charming" href="https://cygnet.neocities.org" target="_blank"><img src="!g/cygnet.png"></a>
+			<a href="https://strawberry-gashes.neocities.org" title="erin - cute pastel site, has a ton of cute resources, and another inspiration for my site!" target="_blank"><img src="!g/strawberry-gashes.gif"></a>
+			<a title="bunny - another super cute site!!!" href="https://pastelbunnybab.neocities.org/" target="_blank"><img src="!g/pastelbunnybab.gif"></a>
+			<a title="philia - nice site :)" href="https://philia995.neocities.org" target="_blank"><img src="!g/philia995.gif"></a>
+			<a title="tsukinio charming site and a inspiration for mine! lovely layout. also i love the button" href="https://komichi.neocities.org" target="_blank"><img src="!g/komichi.png"></a>
+			<a title="fae - FAE!!! fae's website is so fucking cool to me i love this site a whole ton!!!! i love the intricate designs that all of their pages have. im just in awe every time i give em a visit! album shelf + dreams pages are some of my favs. oh did i mention that their art is really cool too? YUP!" href="https://faegardens333.neocities.org" target="_blank"><img src="!g/faegardens333.gif"></a>
+			<a title="princess - very cool site! always has a neat layout" href="https://princss.online" target="_blank"><img src="https://princss.online/media/images/buttons/princss_button.png"></a>
+			<a title="mari - cute and silly" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
+			<a title="avery - soft and cozy blog" href="https://isopodz.neocities.org" target="_blank"><img src="https://isopodz.neocities.org/buttons/littleguybutton.jpg" alt="isopodz"></a>
+			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
+			<a title="benrey - love the shrines" href="https://lamorte.neocities.org" target="_blank"><img src="!g/lamorte.gif"></a>
+			<a title="harley - very simple but cute blog!" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
 			<a title="voidsdimension" href="https://voidsdimension.neocities.org" target="_blank"><img src="!g/voidsdimension.png"></a>
 			<a title="hues" href="https://sillytime.neocities.org" target="_blank"><img src="!g/sillytime.png"></a>
 			<a title="mei" href="https://meixins.neocities.org" target="_blank"><img src="!g/meixins.gif"></a>
@@ -141,7 +131,8 @@
 			<a title="benny" href="https://sugarforbrains.neocities.org/" target="_blank"><img src="!g/sugarforbrains.gif"></a>
 			<a title="rita" href="https://sunnyday.neocities.org/" target="_blank"><img src="!g/sunnyday.png"></a>
 			<a title="shiraru" href="https://shiraru.neocities.org/" target="_blank"><img src="!g/shiraru.PNG"></a>
-			<a title="lana" href="https://porce-lana.blogspot.com/" target="_blank"><img src="!g/porcelana.png"></a>
+			<a title="lana - a personal site that is in portuguese but that won't stop me from enjoying it!! i can somewhat read it a lil bit but either way i just love how this site looks! and the stuff they write (despite me using a translator) is very interesting!" href="https://porce-lana.blogspot.com/" target="_blank"><img src="!g/porcelana.png"></a>
+			<a title="eyes emoji" href="https://the0bserver.neocities.org/" target="_blank"><img src="!g/the0bserver.png" alt="the0bserver"></a>
 			<a title="lostletters" href="https://lostletters.neocities.org" target="_blank"><img src="!g/lostletters.gif"></a>
 			<a title="soupie" href="https://soupie.neocities.org" target="_blank"><img src="!g/soupie.png"></a>
 			<a title="luna" href="https://pixelmoondust.neocities.org/" target="_blank"><img src="!g/pixelmoondust.gif"></a>
@@ -166,12 +157,12 @@
 			<a title="mezu" href="https://mezucore.neocities.org/" target="_blank"><img src="!g/mezucore.png"></a>
 			<a title="bon" href="https://bondiaries.neocities.org" target="_blank"><img src="!g/bondiaries.png"></a>
 			<a title="dhampyr" href="https://dhampyr.neocities.org" target="_blank"><img src="!g/dhampyr.gif"></a>
-			<a title="des" href="https://des.neocities.org" target="_blank"><img src="!g/des.gif"></a>
+			<a title="des - literally my doppelganger + very nice art!" href="https://des.neocities.org" target="_blank"><img src="!g/des.gif"></a>
 			<a title="2044 / goner" href="https://2044.neocities.org" target="_blank"><img src="!g/2044.gif"></a>
 			<a title="santiago" href="https://dhampirave.neocities.org" target="_blank"><img src="!g/dhampirave.png"></a>
 			<a title="sarah" href="https://inkcaps.neocities.org" target="_blank"><img src="!g/inkcaps.gif"></a>
 			<a title="josie" href="https://cynosurestation.neocities.org/" target="_blank"><img src="!g/cynosurestation.gif"></a>
-			<a title="rosemary" href="https://hillhouse.neocities.org/" target="_blank"><img src="!g/hillhouse.png"></a>
+			<a title="rosemary - amazing web design skills + there is so much to see and explore!!!! i love this site a lot" href="https://hillhouse.neocities.org/" target="_blank"><img src="!g/hillhouse.png"></a>
 			<a title="viter" href="https://durango.neocities.org/" target="_blank"><img src="!g/durango.gif"></a>
 			<a title="pumpkin-ninja" href="https://pumpkin-ninja.neocities.org/sweethome" target="_blank"><img src="!g/pumpkin-ninja.gif"></a>
 			<a href="https://buntsukim.neocities.org/" target="_blank"><img src="!g/buntsukim.jpg"></a>
@@ -193,7 +184,7 @@
 
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
-		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a>
+		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
@@ -284,6 +275,7 @@
 			<a href="https://www.amelia.sg/ametarium/" target="_blank"><img src="!g/ametarium.gif"></a>
 			<a title="kobayashi yumiko's postcard shop" href="https://wadouraku.co.jp/SHOP/837454/list.html" target="_blank"><img src="!g/wadouraku.co.jp-yumiko-kobayashi.jpg"></a>
 			<a href="http://berry.heartette.net/" target="_blank"><img src="!g/berry.heartette.gif"></a>
+			<a title="lily - cute site of an artists i follow!" href="https://mothcub.neocities.org" target="_blank"><img src="!g/mothcub.gif"></a>
 		</div>
 
 		<div class="banner">
@@ -295,7 +287,7 @@
 		<div id="forums" class="neo">
 			<a title="cinni's social site!" href="https://angel-town.cinni.net" target="_blank"><img src="!g/angel-town.gif"></a>
 			<a title="drawing site by cinni.net" href="https://oekaki.cinni.net" target="_blank"><img src="!g/cinnisoekaki.gif"></a>
-			<a title="status cafe - a nicer twitter even" href="https://status.cafe"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
+			<a title="status cafe - a nicer twitter even" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
 			<a title="melonland.net forum" href="https://forum.melonland.net" target="_blank"><img src="!g/MELONLAND-FORUM.gif"></a>
 			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
 		</div>
@@ -332,17 +324,16 @@
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
 
 		<div id="grave" class="neo">
-			<a title="nulltown" href="https://nulltown.neocities.org/" target="_blank"><img src="https://nulltown.neocities.org/img/null-town-button.gif" alt="nulltown"></a>
 			<a title="mewtle" href="https://meowii.neocities.org" target="_blank"><img src="!g/meowii.gif"></a>
 			<a title="leanne" href="https://leanneu.neocities.org" target="_blank"><img src="!g/leanne.png"></a>
 			<a title="meg" href="https://lim-lim.neocities.org/" target="_blank"><img src="!g/limlim.jpg"></a>
 			<a href="https://ohnno-eggs.neocities.org/" target="_blank"><img src="!g/ohnno-eggs.png"></a>
 			<a href="https://reminiscing.neocities.org" target="_blank"><img src="!g/reminiscing.png"></a>
 			<a title="miu" href="https://gears.neocities.org" target="_blank"><img src="!g/gears.gif"></a>
-			<a title="aoi" href="https://a0i.neocities.org" target="_blank"><img src="!g/a0i.gif"></a>
-			<a title="nork" href="https://nork.neocities.org/" target="_blank"><img src="https://nork.neocities.org/subpages/buttonnork2.png" alt="nork"></a>
+			<a title="aoi - lovely layout and interesting links in here!" href="https://a0i.neocities.org" target="_blank"><img src="!g/a0i.gif"></a>
 			<a href="https://deathbycats.neocities.org/" target="_blank"><img src="!g/deathbycats.png"></a>
 			<a title="cora - cute site!! i love the cats around this site" href="https://realitv.neocities.org" target="_blank"><img src="!g/realitv.gif"></a>
+			<a title="nyatchi - such a cute layout" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
