--- a/public/music/index.html
+++ b/public/music/index.html
@@ -29,7 +29,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>11.nov.23</b> - <a href="cds.html">CD collection</a> page has been finished. go check it out!
+				<b>01.dec.23</b> - new featured song &amp; album! working on my 2023 music recap
 			</marquee>
 		</div>
 
@@ -87,15 +87,16 @@
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>internet yamero</b> by aiobahn feat. kotoko
-				<iframe width="100%" height="152" src="https://www.youtube-nocookie.com/embed/51GIxXFKbzk?si=rNR7n-wcTbfwhUPb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				insane song imo, i really have to appreciate the range in subgenres this song has and how well aiobahn manages to put it all together to make this AWESOME listening experience.
+				<b>spell (주문을 걸어)</b> by golden child
+				<iframe width="560" height="152" src="https://www.youtube-nocookie.com/embed/jMtoSkKhJCk?si=jKb8D8gl3vREuV9e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>i've been obsessed with this song for quite a bit and i just need to say that this is kpop perfection to me. i love a good ass song that makes me wanna get up and dance to it.</p>
+				<p><b>links:</b> <a href="https://open.spotify.com/track/5LCag4jeAzDPVgUtz02aVZ?si=b1cf4a0e15fd4697" target="_blank">spotify</a></p>
 			</div>
 			<div class="lp">
-				<b>おしえてV感覚</b> by 溶けない名前 (tokenainamae)
-				<iframe src="https://open.spotify.com/embed/album/1e66PlisjEqKSIMJMW25L0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-				a very chill japanese shoegaze EP... very sweet ^-^
-				<br><b>links:</b> <a href="https://youtu.be/7LmOxFm6Hyk" target="_blank">youtube</a>
+				<b>コケガネのうた (kokegane no uta)</b> by 椎名もた (siinamota)
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=mKPRnF5TPKtCspPB&amp;list=OLAK5uy_lMJRDJtJjAx8DABdSfHCHnZzep9hDTxnw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>one of siinamota's best releases! this is so so charming. ranging from sweet songs to energetic ones, i think this EP has a great balance to it. my favorite song from here is <i>ましろの色 (mashiro no iro)</i></p>
+				<p><b>links:</b> <a href="https://open.spotify.com/album/5Cp38bMkCtYSx3xEEEIN6B?si=TlE5QKjiR5qj9isSGLq1og" target="_blank">spotify</a></p>
 			</div>
 			<hr>
 			<center>past featured music can be found <a href="featured.html">here</a>!</center>
@@ -129,7 +130,7 @@
 		</div>
 
 		<footer>
-			last updated on 23.nov.23
+			last updated on 01.dec.23
 			<br>
 
 			<b>credit:</b> <a href="https://forums.htmlhelp.com/index.php?showtopic=18694" target="_blank">random img JS code</a> used for the "ads" <span class="emoji1"></span>
