--- a/public/home.html
+++ b/public/home.html
@@ -333,6 +333,7 @@ just dont take the ENTIRE code for your OWN site! dont be that person please!
 			<!-- recently added -->
 			<div id="recently" class="gradient3 border3">
 				<p><span class="title"><img src="/!g/pix/laptop.gif"> site updates</span>
+					<li>01.dec.23 - <a href="/music">featured song &amp; album</a></li>
 					<li>28.nov.23 - <a href="/vgs/fashion-dreamer/index.html">fashion dreamer</a> page big update!</li>
 					<li>27.nov.23 - <a href="/journal">journal log</a></li>
 					<li>24.nov.23 - <a href="/music/listening-log/2023/11.html">listening log entry</a></li>
