website is now live YAY!

--- a/website/home-wip.html
+++ b/website/home-wip.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <!-- 
-coded with love by des! / started on nov 15 2023
+coded with love by des!
+started coding on nov 15 2023
 feel free to look around :) just don't be THAT person and take the entire code for your site...
  -->
 
