added github to links

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -44,8 +44,12 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
+					<img src="!g/me-irl/birthday-seal.jpg">
+					<img src="!g/me-irl/epic-vamp.jpg">
 					<img src="/collection/cats/!g/hessokind.jpg">
 					<img src="/collection/cats/!g/ishelistening.jpg">
+					<img src="!g/me-irl/silly_dog.png">
+					<img src="!g/me-irl/good-light-skull.jpg">
 					<img src="/!g/gif/darksoulsskel.gif">
 					<img src="!g/me-irl/nyaboom.jpg">
 					<img src="/collection/cats/!g/gatoempanada.jpg">
@@ -55,7 +59,6 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 					<img src="/collection/cats/!g/creatureofjoy.jpg">
 					<img src="/collection/cats/!g/hessonervious.jpg">
 					<img src="/collection/cats/!g/sleepaddict.jpg">
-
 					<img src="!g/me-irl/lalalalala.jpg">
 				</marquee>
 			</div>
@@ -174,19 +177,9 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 		</div>
 	</div>
 
-	<!-- 	info pop up -->
-	<div id="box" class="pop-up draggable">
-		<div id="header">read_me.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
-		<div class="wrapper-in padding list">
-			<li>every window is draggable!</li>
-			<li>this page is inspired by parsley onuma's iyueni and its music video</li>
-			<li>illustration by <a href="https://twitter.com/narumeNKR/status/1531955172074631171" target="_blank">narumeNKR</a></li>
-		</div>
-	</div>
-
 	<!-- 	interests linkes -->
 	<div id="box" class="dislikes draggable">
-		<div id="header">dislikes.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div id="header">i_hate_u.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<li>most spicy food...
@@ -201,7 +194,7 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 
 	<!-- 	interests linkes -->
 	<div id="box" class="likes draggable">
-		<div id="header">likes.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div id="header">favs.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<div class="title">interests</div>
@@ -272,12 +265,11 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<img src="/!g/pix/buttermeadow.gif" style="position:absolute;bottom:20px;right:20px;pointer-events:none;width:55px;">
-				<img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;">
-				<li><a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a></li>
+				<a title="e-mail" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
+				<li><a href="https://github.com/doqmeat" target="_blank">github</a></li>
 				<li><a href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a href="https://codepen.io/doqmeat" target="_blank">codepen</a></li>
-				<li><a href="https://www.pinterest.com/lakiitu/" target="_blank">pinterest</a></li>
 				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
 				<li><a href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
@@ -302,7 +294,7 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"></p>
 
-				<p>one day i stumbled upon <a href="https://hunipyon.neocities.org/home" target="_blank">hunipyon</a>'s site and i just fell in love with the concept of having my very own site i can customize however the hell i want and put whatever i want in it. the possibilities are truly endless!</p>
+				<p>one day i stumbled upon <a href="https://hunipyon.neocities.org/" target="_blank">hunipyon</a>'s site and i just fell in love with the concept of having my very own site i can customize however the hell i want and put whatever i want in it. the possibilities are truly endless!</p>
 
 				<p><img src="/!g/deco/puter.gif" align="left" style="margin-right:15px;">so i took it upon myself to learn html and css. it was pretty tricky the first few months. and i still have much to learn. but i am confident enough in my coding skills where i can imagine how i want a page and build it from scratch. which is certainly a new hobby i've picked up from making my own site! i have fallen in love with the process of making new pages and decorating them to my liking. i find it very entertaining and fun to do, which is why all of my pages are unique on their own!</p>
 
@@ -310,8 +302,21 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 
 				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
 
-				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">with all that said, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding related questions you might have. anything goes, thank you very much for reading.</p>
+				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">with all that said, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
+
+				<p style="text-align: right"><b>last updated on: 01.dec.23</b></p>
 			</div>
+		</div>
+	</div>
+
+	<!-- 	info pop up -->
+	<div id="box" class="pop-up draggable">
+		<div id="header">read_me.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="wrapper-in padding list">
+			<li>every window is draggable!</li>
+			<li>best viewed on a 1134px+ screen</li>
+			<li>this page is inspired by parsley onuma's iyueni and its music video</li>
+			<li>illustration by <a href="https://twitter.com/narumeNKR/status/1531955172074631171" target="_blank">narumeNKR</a></li>
 		</div>
 	</div>
 
