december listening log created + minor changes
logged yukika's timelapse

--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -41,7 +41,8 @@
 		<h3>music</h3>
 		<ul>
 			<li class="yes"><a href="/music/cds.html" target="_blank">cd collection</a></li>
-			<li class="dot">fix formatting of <a href="/music/recaps/2022.html" target="_blank">summary 2022</a></li>
+			<li class="dot">fix formatting of <a href="/music/recaps/2022.html" target="_blank">2022 music recap</a></li>
+			<li class="dot">write 2023 music recap</li>
 			<li class="no">fav music videos - w/ gifs and comments</li>
 			<li class="no">kpop photocard gallery - i dont collect them but i think it would be cool to display the ones i have</li>
 			<li class="no">re-do star pixels for rating listening logs</li>
