--- a/website/home.html
+++ b/website/home.html
@@ -334,7 +334,7 @@ just dont take the ENTIRE code for your OWN site! dont be that person please!
 			<div id="recently" class="gradient3 border3">
 				<p><span class="title"><img src="/!g/pix/laptop.gif"> site updates</span>
 
-					<li>01.dec.23 - website now deploys from <a href="https://github.com/doqmeat/website" target="_blank" class="outlink">github!</a> + <a href="/music">featured song &amp; album</a></li>
+					<li>01.dec.23 - december <a title="yukika's timelapse" href="/music/listening-log/2023/12.html#1">listening log</a> created + website now deploys from <a href="https://github.com/doqmeat/website" target="_blank" class="outlink">github!</a> + <a href="/music">featured song &amp; album</a></li>
 					<li>28.nov.23 - <a href="/vgs/fashion-dreamer/index.html">fashion dreamer</a> page big update!</li>
 					<li>27.nov.23 - <a href="/journal">journal log</a></li>
 					<li>24.nov.23 - <a href="/music/listening-log/2023/11.html">listening log entry</a></li>
