--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -60,6 +60,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 			<br>
 			<details open>
 				<summary>2023</summary>
+				<a href="2023/12.html" target="iframe_a">december</a>
 				<a href="2023/11.html" target="iframe_a">november</a>
 				<a href="2023/10.html" target="iframe_a">october</a>
 				<a href="2023/09.html" target="iframe_a">september</a>
@@ -74,7 +75,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 		</div>
 
 		<div id="col2">
-			<iframe src="2023/11.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
+			<iframe src="2023/12.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
 		</div>
 	</div>
 
