--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -92,6 +92,7 @@
 			<ul>but specially these ones:
 				<li class="no">/about</li>
 				<li class="no">/notebook</li>
+				<li class="no">/journal</li>
 				<li class="no">/shrines/mizu</li>
 			</ul>
 			<li class="no">make 200 x 40 banner</li>
