--- a/website/home-wip.html
+++ b/website/home-wip.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- 
 coded with love by des!
-started coding on nov 15 2023
+started on nov 15 2023
 feel free to look around :) just don't be THAT person and take the entire code for your site...
  -->
 
@@ -13,11 +13,9 @@ feel free to look around :) just don't be THAT person and take the entire code f
 	<title>doqmeat v3</title>
 	<meta name="description" content="des' personal website">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
-
-
 	<!--	CSS -->
 	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="!f/homepage/home-wip-grid.css" rel="stylesheet" type="text/css" media="all">
+	<link href="!f/homepage/home-wip.css" rel="stylesheet" type="text/css" media="all">
 
 	<!--
 	<link class="theme" href="CSS" rel="stylesheet" type="text/css">
@@ -49,27 +47,30 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<h3>personal</h3>
 			<a href="/about">about</a>
 			<a href="/journal">journal</a>
-			<a href="/photobook">photobook</a>
-			<s><a href="/wip">art</a></s>
-			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html">safe spot</a>
-
-			<h3>interests</h3>
 			<a href="/blog">blog</a>
+			<a href="/photobook">photobook</a>
+			<s><a href="/wip">arts &amp; crafts</a></s>
+
 			<a href="/shrines">shrines</a>
 			<a href="/collection">collections</a>
-			<a href="/vgs">video games</a>
+			<a href="/vgs">gaming log</a>
 			<a href="/music">music</a>
 			<a href="/music/listening-log/2023/11.html">listening log</a>
+
+			<h3>misc</h3>
 			<a href="/masaaki-yuasa">masaaki yuasa watchlist</a>
 			<a href="/october-movies">october movie log</a>
-
+			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html">safe spot</a>
 
 			<h3>site</h3>
 			<a href="/sites">button wall</a>
-			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook">notebook</a>
 			<a href="webgarden/greenhouse.html">webgarden</a>
+			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook">notebook</a>
 			<a href="/sitemap">sitemap</a>
-			<a href="" target="_blank" class="outlink">guestbook</a>
+			<h3>offsite</h3>
+			<a href="" target="_blank">guestbook</a>
+			<a href="" target="_blank">neocities profile</a>
+			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink">github</a>
 		</nav>
 
 		<div id="intro" class="box">
