--- a/website/sitemap.html
+++ b/website/sitemap.html
@@ -87,12 +87,15 @@
 			</ul>
 			<li><a href="/notebook" target="_parent">notebook</a></li>
 			<ul>
-				↳ <a href="/notebook/links/credit.html" target="_parent">credit</a>
-				<br> ↳ <a href="/notebook/links/index.html" target="_parent">links &amp; resources</a>
-				<br> ↳ <a href="/notebook/links/fonts.html" target="_parent">fonts</a>
-				<br> ↳ <a href="/notebook/graphics.html" target="_parent">graphics</a>
-				<br> ↳ <a href="/notebook/sitely/to-dos.html" target="_parent">to-do's</a>
-				<br><br>
+				<li>links</li>
+				<ul> ↳ <a href="/notebook/links/index.html" target="_parent">links &amp; resources</a>
+					<br>↳ <a href="/notebook/links/credit.html" target="_parent">credit</a>
+					<br> ↳ <a href="/notebook/links/fonts.html" target="_parent">fonts</a>
+				</ul>
+				<li>sitely</li>
+				<ul> ↳ <a href="/notebook/graphics.html" target="_parent">graphics </a>
+					<br> ↳ <a href="/notebook/sitely/to-dos.html" target="_parent">to-do's</a>
+				</ul>
 				<li><b>F2U</b></li>
 				<ul>
 					↳ <a href="/notebook/F2U/stamps.html" target="_parent">stamps</a>
@@ -101,10 +104,10 @@
 				</ul>
 				<li><b>archives</b></li>
 				<ul>
-					↳ <a href="/notebook/archive/recently.html" target="_parent">updates</a>
+					↳ <a href="/notebook/archive/updates.html" target="_parent">updates</a>
 					<br> ↳ <a href="/notebook/archive/change-log.html" target="_parent">changelog</a>
-					<br> ↳ <a href="/notebook/archive/layouts-home.html" target="_parent">homepage layouts</a>
-					<br> ↳ <a href="/notebook/archive/layouts-pages.html" target="_parent">page layouts</a>
+					<br> ↳ <a href="/notebook/archive/homepage/index.html" target="_parent">homepage layouts</a>
+					<br> ↳ <a href="/notebook/archive/layouts/index.html" target="_parent">page layouts</a>
 				</ul>
 			</ul>
 		</ul>
