--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -304,6 +304,7 @@
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/obake1.gif"></a>
 		<img src="/!g/pix/rilakkuma.gif">
 		<img src="/!g/pix/ghost1.gif">
+		<img src="/!g/pix/pics.gif">
 
 
 
