--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -194,6 +194,7 @@
 		<li><a href="https://elrumordelaluz.github.io/csshake/" target="_blank">font shake CSS code</a></li>
 		<li><a href="https://stackoverflow.com/questions/21479107/saving-html5-textarea-contents-to-file/48550997#48550997" target="_blank">save textarea as txt file</a></li>
 		<li><a href="https://pastebin.com/N4uKpWLs" target="_blank">CRT TV effect</a></li>
+		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
 
 
 		<h3 id="layouts">templates / layouts</h3>
