--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -59,7 +59,7 @@
 	<div id="wrapper">
 		<p class="hide" style="text-align:left;"><small><a href="/home" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; sitely</small></p>
 
-		<h1>site materials</h1>
+		<h1>graphics</h1>
 
 		<p>img heavy! might have to reload the page so all imgs to load</p>
 
@@ -192,19 +192,7 @@
 
 		<h2 id="pix">pixels</h2>
 
-		<h3 id="tiny">tiny</h3>
-
-		<a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/li1.gif"><img src="/!g/pix/li10.gif"><img src="/!g/pix/li12.gif"><img src="/!g/pix/li13.gif"><img src="/!g/pix/li11.gif"><img src="/!g/pix/li13.gif"><img src="/!g/pix/li14.gif"><img src="/!g/pix/li15.gif"><img src="/!g/pix/li16.gif"><img src="/!g/pix/li17.gif"><img src="/!g/pix/li19.gif"><img src="/!g/pix/li18.gif"><img src="/!g/pix/li2.gif"><img src="/!g/pix/li3.gif"><img src="/!g/pix/li4.gif"><img src="/!g/pix/li5.gif"><img src="/!g/pix/li6.gif"><img src="/!g/pix/li8.gif"><img src="/!g/pix/li7.gif"><img src="/!g/pix/li9.gif"></a>
-		<a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/heartfabi.gif"><img src="/!g/pix/strawfavi.gif"></a>
-		<a title="sleepysprout" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="/!g/pix/flowericon1.gif"><img src="/!g/pix/mizuli.png"><img src="/!g/pix/1leaf.png"></a>
-		<img src="/!g/pix/starblue.gif"><img src="/!g/pix/starpink.gif"><img src="/!g/pix/staryellow.gif">
-		<img src="/!g/pix/musicnote1.gif">
-		<img src="/!g/pix/caution1.gif">
-		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/flashing-star-sozaiya.gif"></a>
-		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/mail-sozaiya.gif"></a>
-
 		<h3 id="fav">favicons</h3>
-
 		<img src="/!g/pix/blog.gif">
 		<img src="/!g/pix/new2.gif">
 		<img src="/!g/pix/book.gif">
@@ -306,10 +294,21 @@
 		<img src="/!g/pix/ghost1.gif">
 		<img src="/!g/pix/pics.gif">
 
+		<h3 id="tiny">tinnier</h3>
+
+		<a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/li1.gif"><img src="/!g/pix/li10.gif"><img src="/!g/pix/li12.gif"><img src="/!g/pix/li13.gif"><img src="/!g/pix/li11.gif"><img src="/!g/pix/li13.gif"><img src="/!g/pix/li14.gif"><img src="/!g/pix/li15.gif"><img src="/!g/pix/li16.gif"><img src="/!g/pix/li17.gif"><img src="/!g/pix/li19.gif"><img src="/!g/pix/li18.gif"><img src="/!g/pix/li2.gif"><img src="/!g/pix/li3.gif"><img src="/!g/pix/li4.gif"><img src="/!g/pix/li5.gif"><img src="/!g/pix/li6.gif"><img src="/!g/pix/li8.gif"><img src="/!g/pix/li7.gif"><img src="/!g/pix/li9.gif"></a>
+		<a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/heartfabi.gif"><img src="/!g/pix/strawfavi.gif"></a>
+		<a title="sleepysprout" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="/!g/pix/flowericon1.gif"><img src="/!g/pix/mizuli.png"><img src="/!g/pix/1leaf.png"></a>
+		<img src="/!g/pix/starblue.gif"><img src="/!g/pix/starpink.gif"><img src="/!g/pix/staryellow.gif">
+		<img src="/!g/pix/musicnote1.gif">
+		<img src="/!g/pix/caution1.gif">
+		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/flashing-star-sozaiya.gif"></a>
+		<a href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/mail-sozaiya.gif"></a>
 
 
 
-		<h3 id="big">a bit bigger</h3>
+
+		<h3 id="big">bigger</h3>
 		<a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/mushhome1.gif"><img src="/!g/pix/mushhome2.gif"><img src="/!g/pix/mushhome3.gif"><img src="/!g/pix/mushhome4.gif"></a>
 		<img src="/!g/pix/butter1.gif">
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/sorahana-butterfly-p2.gif"></a>
@@ -347,8 +346,6 @@
 		<img src="/!g/pix/cam.png">
 		<img src="/!g/deco/koinuko-kittytiny.gif">
 		<img src="/!g/deco/hk-p.gif">
-		<img src="/!g/deco/tv.gif">
-		<img src="/!g/deco/desktop-set.gif">
 
 		<!-- sozaiya405 bears -->
 		<br><a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_ani_k_kya-.gif"><img src="/!g/pix/icon_k_clover1.gif"><img src="/!g/pix/icon_k_clover2.gif"><img src="/!g/pix/icon_k_love1.gif"><img src="/!g/pix/icon_k_mail.gif"><img src="/!g/pix/kuma-macbook-60.png"><img src="/!g/pix/icon_k_gyo.gif"><img src="/!g/pix/music-note-sozaiya.gif"><img src="/!g/pix/music-note2-sozaiya.gif"></a>
@@ -458,6 +455,20 @@
 		<h2 id="stickers">big pixels / stickers</h2>
 
 		<h3 id="cats">cats</h3>
+		<img src="/!g/deco/df04-halloween-cat.gif">
+		<img src="/!g/deco/cat%20471.gif">
+		<img src="/!g/deco/df14-halloween-cat.gif">
+		<img src="/!g/deco/eh01-icon-cat.gif">
+		<img src="/!g/deco/g02-icon-cat.gif">
+		<img src="/!g/deco/hf01-halloween-cat.gif">
+		<img src="/!g/deco/hf01-icon-cat.gif">
+		<img src="/!g/deco/kba08-icon-cat.gif">
+		<img src="/!g/deco/kba10-icon-cat.gif">
+		<img src="/!g/deco/cat%20358.gif">
+		<img src="/!g/deco/p13-icon-cat.gif">
+		<img src="/!g/deco/cat%20367.gif">
+		<img src="/!g/deco/cat%20380.gif">
+		<br>
 		<img src="/!g/deco/catrock.gif">
 		<img src="/!g/pix/sleepycat.gif">
 		<img src="/!g/deco/kittyroom.gif">
@@ -496,24 +507,10 @@
 		<img src="/!g/deco/cat%20107.gif">
 		<img src="/!g/deco/cat%20127.gif">
 		<img src="/!g/deco/cat%20187.gif">
-		<img src="/!g/deco/cat%20358.gif">
-		<img src="/!g/deco/cat%20367.gif">
-		<img src="/!g/deco/cat%20380.gif">
 		<img src="/!g/deco/cat%20402.gif">
 		<img src="/!g/deco/cat%20472.gif">
-		<img src="/!g/deco/cat%20471.gif">
 		<img src="/!g/deco/cat106.gif">
-		<img src="/!g/deco/flower%20108.gif">
-		<img src="/!g/deco/df04-halloween-cat.gif">
-		<img src="/!g/deco/df14-halloween-cat.gif">
-		<img src="/!g/deco/eh01-icon-cat.gif">
-		<img src="/!g/deco/g02-icon-cat.gif">
-		<img src="/!g/deco/hf01-halloween-cat.gif">
-		<img src="/!g/deco/hf01-icon-cat.gif">
-		<img src="/!g/deco/kba08-icon-cat.gif">
-		<img src="/!g/deco/kba10-icon-cat.gif">
 		<img src="/!g/deco/o02-kotatsu-cat.gif">
-		<img src="/!g/deco/p13-icon-cat.gif">
 		<img src="/!g/deco/va04-icon-tiger.gif">
 		<img src="/!g/deco/vb04-icon-tiger.gif">
 		<img src="/!g/deco/wda01-icon-cat.gif">
@@ -533,6 +530,8 @@
 		<img src="/!g/deco/catpots.gif">
 		<a href="https://www.deviantart.com/nyan-berri" title="nyan_berry" target="_blank"><img src="/!g/deco/tasty_planet_by_nyan_berri.png"></a>
 		<img src="/!g/deco/sleepy-cats.gif">
+		<img src="/!g/deco/kitty-text.gif">
+		<img src="/!g/deco/kitty-basket.gif">
 
 
 		<br>
@@ -569,6 +568,8 @@
 		<br><a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/ab01-icon-heart.png"><img src="/!g/pix/ab02-icon-heart.png"><img src="/!g/pix/ab03-icon-heart.png"><img src="/!g/pix/ab04-icon-heart.png"><img src="/!g/pix/ab05-icon-heart.png"><img src="/!g/pix/ab06-icon-heart.png"><img src="/!g/pix/ab07-icon-heart.png"><img src="/!g/pix/ab08-icon-heart.png"><img src="/!g/pix/ab09-icon-heart.png"><img src="/!g/pix/ab11-icon-heart.png"><img src="/!g/pix/ab12-icon-heart.png"><img src="/!g/pix/ab13-icon-heart.png"></a>
 
 		<h3 id="stationary">stationary / devices</h3>
+		<img src="/!g/deco/tv.gif">
+		<img src="/!g/deco/desktop-set.gif">
 		<img src="/!g/deco/instant-pic.gif">
 		<a title="ametarium" href="https://www.amelia.sg/ametarium/" target="_blank"><img src="/!g/deco/instant-ametarium.png"></a>
 		<a title="bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/collegeroad_pencase.gif"></a>
@@ -600,6 +601,8 @@
 
 		<h3 id="nat">nature</h3>
 		<h4>flowers / plants</h4>
+		<img src="/!g/deco/flower8.gif">
+		<img src="/!g/deco/left-hanger.gif">
 		<img src="/!g/deco/flower3-blume260.gif">
 		<img src="/!g/deco/flower1.gif">
 		<img src="/!g/deco/flowerbutters.gif">
@@ -633,6 +636,19 @@
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-nandbeebandc-b.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-flowerbee.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-andkinocolong1-m.gif"></a>
+		<img src="/!g/deco/yellow-basket.gif">
+		<img src="/!g/deco/ywllow-flowers.gif">
+		<img src="/!g/deco/bell-flwoer.png">
+		<img src="/!g/deco/bouquet-flowers.gif">
+		<img src="/!g/deco/bouquet-flowers2.gif">
+		<img src="/!g/deco/sunflowers.gif">
+		<img src="/!g/deco/sunflowers1.gif">
+		<img src="/!g/deco/sunflowers2.gif">
+		<img src="/!g/deco/tulips.gif">
+		<img src="/!g/deco/bench-flowers.gif">
+		<img src="/!g/deco/flowers.gif">
+		<img src="/!g/deco/flower%20108.gif">
+
 
 		<h4>trees</h4>
 		<img src="/!g/deco/tree1.gif">
@@ -646,6 +662,10 @@
 		<img src="/!g/deco/treestump2.gif">
 		<img src="/!g/deco/treeswing.gif">
 		<img src="/!g/deco/blossom1.gif">
+		<img src="/!g/deco/heart-tree.gif">
+		<img src="/!g/deco/cload-star-tree.gif">
+		<img src="/!g/deco/stars-branches.gif">
+
 
 		<h4>rainbows</h4>
 		<img src="/!g/deco/rainbow1.gif">
@@ -654,6 +674,7 @@
 		<a href="https://pixelins.tumblr.com" title="pixelins" target="_blank"><img src="/!g/deco/rainbow3.gif"></a>
 		<img src="/!g/deco/rainbow.gif">
 		<img src="/!g/deco/rainbow.png">
+		<img src="/!g/deco/flowers-cloud-rainbow.gif">
 
 		<h4>bugs</h4>
 		<img src="/!g/deco/butterflies2.gif">
@@ -712,6 +733,9 @@
 
 		<h4>space</h4>
 		<a href="https://pixelins.tumblr.com" title="pixelins" target="_blank"><img src="/!g/deco/starsclutter.gif"></a>
+		<img src="/!g/deco/happy-cloud.gif">
+		<img src="/!g/deco/moon-n-stars.gif">
+		<img src="/!g/deco/cload-star-tree.gif">
 
 		<h3 id="food">food</h3>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/deco/sorahana-pancake10d2.gif"></a>
@@ -762,6 +786,7 @@
 		<img src="/!g/deco/flowerpinkp.gif">
 		<img src="/!g/deco/bow.gif">
 		<a title="BlackRabbit-25" href="https://www.deviantart.com/blackrabbit-25/art/Sakura-Pixel-352484976" target="_blank"><img src="/!g/deco/sakura.gif"></a>
+		<img src="/!g/deco/flower3.gif">
 
 
 		<h3 id="vgs">video games</h3>
