updated button wall
i'm still in the progress of adding tooltip messages to individual sites!

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -179,6 +179,7 @@
 			<a title="aaron" href="https://applesayce.neocities.org/" target="_blank"><img src="!g/applesayce.gif" alt="applesayce"></a>
 			<a title="mapplebear - a super sweet and cozy site" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
 			<a title="nork - i love the layouts a lot. the music page is super nice as well." href="https://nork2004.neocities.org" target="_blank"><img src="!g/nork2004.png" alt="nork2004"></a>
+			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
 
 		</div>
 
